# earthquake_exposure

./: .gitignore  METHODOLOGY.md  README.md  TECHNICAL_REPORT.md  pyproject.toml
notebooks/: exploration.ipynb
outputs/: summary_statistics.txt
src/earthquake_exposure/: acquire.py  viz.py
