[tool.poetry]
name = "earthquake_exposure"
version = "0.1.0"
description = "A simple tool to check how close cities are to earthquakes."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
geopandas = "^0.13"
requests = "^2.31"
scipy = "^1.11"
fastapi = "^0.100"
uvicorn = "^0.23"
shapely = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
