[tool.poetry]
name = "earthquake_exposure"
version = "0.1.0"
description = "Our project for the spatial algorithms assignment. It calculates collision risks for cities."
authors = [
    "Surya Jamuna Rani Subramanian",
    "Govindharajulu Ramachandran"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
geopandas = "^0.13"
requests = "^2.31"
scipy = "^1.11"
fastapi = "^0.100"
uvicorn = "^0.23"
shapely = "^2.0"
plotly = "^5.15"
folium = "^0.14"
matplotlib = "^3.7"
numpy = "^1.24"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
