[tool.poetry]
name = "earthquake_exposure"
version = "0.1.0"
description = "Our project for the spatial algorithms assignment. It calculates collision risks for cities."
authors = [
    "Surya Jamuna Rani Subramanian",
    "Govindharajulu Ramachandran"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
geopandas = "^1.1.2"
requests = "^2.32.5"
scipy = "^1.15.2"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
shapely = "^2.0.7"
plotly = "^5.24.1"
folium = "^0.14.0"
matplotlib = "^3.10.8"
numpy = "^1.26.4"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
